# bd-s25-a2

./: .gitignore  README.md  pyproject.toml  setup_precommit.sh
data/models/: MongoDB.hck.json  MongoDBOptimal.hck.json  Neo4j.hck.json  Neo4jOptimal.hck.json  PostgreSQL.hck.json  PostgreSQLOptimal.hck.json
data_models/: MongoDB.hck.json  PostgreSQL.hck.json
notebooks/: clean_data.ipynb  data_analysis.ipynb  prepare_import.ipynb  prepare_mongo.ipynb  test_data.ipynb
report/: references.bib  report.tex  template.tex
scripts/: README.md  benchmark.ps1  clean_data.py  load_data_mongodb.js  load_data_neo4j.cypher  load_data_psql.sql  prepare_mongo.py  run_queries.py
scripts/import_preparation/: mongo.py  neo4j.py  optimal.py  postgres.py
scripts/optimal/: load_data_mongodb.js  load_data_neo4j.cypher  load_data_psql.sql
scripts/queries/: q1.cypher  q1.js  q1.json  q1.sql  q2.cypher  q2.js  q2.json  q2.sql  q3.sql
