[project]
name = "bd-s25-a1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "ruff>=0.9.9",
]

[tool.ruff]
extend-include = ["*.ipynb"]
extend-select = ["I"]
fix=true
line-length = 90
